--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contrato de não amor</title>
+    <title>Contrato de muito amor</title>
     <style>
         body{
             background-color: pink;
@@ -32,8 +32,8 @@
 </head>
 <body>
     <div class="container">
-        	<h1>Contrato de não amor</h1>
-            <h3>Você Jessiquinha nenem nenem, aceita os termos de não amor que você tem com o senhor Thiago.</h3>
+        	<h1>Contrato de muito amor</h1>
+            <h3>Você Jessiquinha nenem nenem, aceita os termos de muito amor que você tem com o senhor Thiago.</h3>
             <div class="botoes">
                 <button onclick="alerta()">Sim</button>
                 <button onmouseover="desvia(this)">Não</button>
@@ -42,7 +42,7 @@
 
     <script>
         function alerta(){
-            alert("Eu sabiaaaaaaaaaa!!! To bavu")
+            alert("Eu sabiaaaaaaaaaa!!! To amuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu!!!!!!!!!!!!!!!!!!!!!")
         }
         
         function desvia(t){
